--- a/build.gradle
+++ b/build.gradle
@@ -105,60 +105,36 @@ configurations {
 }
 
 dependencies {
-    // Example optional mod dependency with JEI
-    // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
-    // compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
-    // compileOnly "mezz.jei:jei-${mc_version}-neoforge-api:${jei_version}"
-    // We add the full version to localRuntime, not runtimeOnly, so that we do not publish a dependency on it
-    // localRuntime "mezz.jei:jei-${mc_version}-neoforge:${jei_version}"
-
-    // Example mod dependency using a mod jar from ./libs with a flat dir repository
-    // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
-    // The group id is ignored when searching -- in this case, it is "blank"
-    // implementation "blank:coolmod-${mc_version}:${coolmod_version}"
-
-    // Example mod dependency using a file as dependency
-    // implementation files("libs/coolmod-${mc_version}-${coolmod_version}.jar")
-
-    // Example project dependency using a sister or child project:
-    // implementation project(":myproject")
-
-    // For more info:
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-    compileOnly("curse.maven:cobblemon-687131:6125026") // Verifique o ID mais recente
-    // Dependência do Cobblemon (verifique a versão compatível com 1.21.1)
-    //compileOnly("com.cobblemon:mod:1.6.1+1.21.1")
-    //runtimeOnly("com.cobblemon:mod:1.6.1+1.21.1")
+    compileOnly("curse.maven:cobblemon-687131:6125026")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.23"
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
 // A missing property will result in an error. Properties are expanded using ${} Groovy notation.
-var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
-    var replaceProperties = [
-            minecraft_version      : minecraft_version,
-            minecraft_version_range: minecraft_version_range,
-            neo_version            : neo_version,
-            neo_version_range      : neo_version_range,
-            loader_version_range   : loader_version_range,
-            mod_id                 : mod_id,
-            mod_name               : mod_name,
-            mod_license            : mod_license,
-            mod_version            : mod_version,
-            mod_authors            : mod_authors,
-            mod_description        : mod_description
-    ]
-    inputs.properties replaceProperties
-    expand replaceProperties
-    from "src/main/templates"
-    into "build/generated/sources/modMetadata"
-}
+//var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
+//    var replaceProperties = [
+//            minecraft_version      : minecraft_version,
+//            minecraft_version_range: minecraft_version_range,
+//            neo_version            : neo_version,
+//            neo_version_range      : neo_version_range,
+//            loader_version_range   : loader_version_range,
+//            mod_id                 : mod_id,
+//            mod_name               : mod_name,
+//            mod_license            : mod_license,
+//            mod_version            : mod_version,
+//            mod_authors            : mod_authors,
+//            mod_description        : mod_description
+//    ]
+//    inputs.properties replaceProperties
+//    expand replaceProperties
+//    from "src/main/templates"
+//    into "build/generated/sources/modMetadata"
+//}
 // Include the output of "generateModMetadata" as an input directory for the build
 // this works with both building through Gradle and the IDE.
-sourceSets.main.resources.srcDir generateModMetadata
+//sourceSets.main.resources.srcDir generateModMetadata
 // To avoid having to run "generateModMetadata" manually, make it run on every project reload
-neoForge.ideSyncTask generateModMetadata
+//neoForge.ideSyncTask generateModMetadata
 
 // Example configuration to allow publishing using the maven-publish plugin
 publishing {
