--- a/build.gradle
+++ b/build.gradle
@@ -111,30 +111,30 @@ dependencies {
 
 // This block of code expands all declared replace properties in the specified resource targets.
 // A missing property will result in an error. Properties are expanded using ${} Groovy notation.
-//var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
-//    var replaceProperties = [
-//            minecraft_version      : minecraft_version,
-//            minecraft_version_range: minecraft_version_range,
-//            neo_version            : neo_version,
-//            neo_version_range      : neo_version_range,
-//            loader_version_range   : loader_version_range,
-//            mod_id                 : mod_id,
-//            mod_name               : mod_name,
-//            mod_license            : mod_license,
-//            mod_version            : mod_version,
-//            mod_authors            : mod_authors,
-//            mod_description        : mod_description
-//    ]
-//    inputs.properties replaceProperties
-//    expand replaceProperties
-//    from "src/main/templates"
-//    into "build/generated/sources/modMetadata"
-//}
+var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
+    var replaceProperties = [
+            minecraft_version      : minecraft_version,
+            minecraft_version_range: minecraft_version_range,
+            neo_version            : neo_version,
+            neo_version_range      : neo_version_range,
+            loader_version_range   : loader_version_range,
+            mod_id                 : mod_id,
+            mod_name               : mod_name,
+            mod_license            : mod_license,
+            mod_version            : mod_version,
+            mod_authors            : mod_authors,
+            mod_description        : mod_description
+    ]
+    inputs.properties replaceProperties
+    expand replaceProperties
+    from "src/main/template"
+    into "build/generated/sources/modMetadata"
+}
 // Include the output of "generateModMetadata" as an input directory for the build
 // this works with both building through Gradle and the IDE.
-//sourceSets.main.resources.srcDir generateModMetadata
+sourceSets.main.resources.srcDir generateModMetadata
 // To avoid having to run "generateModMetadata" manually, make it run on every project reload
-//neoForge.ideSyncTask generateModMetadata
+neoForge.ideSyncTask generateModMetadata
 
 // Example configuration to allow publishing using the maven-publish plugin
 publishing {
