--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -16,18 +16,18 @@ Mod para customizar os spawns dos Pokémon no Cobblemon.
     type="required"
     versionRange="${neo_version_range}"
     ordering="NONE"
-    side="BOTH"
+    side="SERVER"
 
 [[dependencies.cobblemonspawncustom]]
     modId="minecraft"
     type="required"
     versionRange="[1.21.1]"
     ordering="NONE"
-    side="BOTH"
+    side="SERVER"
 
 [[dependencies.cobblemonspawncustom]]
     modId = "cobblemon"
     mandatory = true
     versionRange = "[1.6.1,)"
     ordering = "AFTER"
-    side = "BOTH"
+    side = "SERVER"
