--- a/cobblemon_spawn_config.json
+++ b/cobblemon_spawn_config.json
@@ -1,5 +1,38 @@
 {
-  "iv_value": 31,
-  "iv_quantity": 3,
-  "species_list": ["eevee", "pikachu", "charizard"]
+    "paradox": {
+        "iv_value": 31,
+        "iv_quantity": 5,
+        "shiny_chance": 1,
+        "ha_chance": 0.8,
+        "species_list": [
+            "snorunt"
+        ]
+    },
+    "legendary": {
+        "iv_value": 31,
+        "iv_quantity": 4,
+        "shiny_chance": 1,
+        "ha_chance": 0.8,
+        "species_list": [
+            "growlithe"
+        ]
+    },
+    "ultrabeasts": {
+        "iv_value": 31,
+        "iv_quantity": 3,
+        "shiny_chance": 1,
+        "ha_chance": 0.8,
+        "species_list": [
+            "geodude"
+        ]
+    },
+    "ditto": {
+        "iv_value": 31,
+        "iv_quantity": 2,
+        "shiny_chance": 1,
+        "ha_chance": 0.8,
+        "species_list": [
+            "ditto"
+        ]
+    }
 }
